<resources>
    <!--Non translateable area start-->

    <!--facebook credential-->
    <string name="FACEBOOK_APP_ID" translatable="false">352251878766792</string>

    <!-- app social site links section -->
    <string name="facebook_url" translatable="false">https://www.facebook.com/EkotarKantho</string>
    <string name="youtube_url" translatable="false">https://www.youtube.com/@ekotarkantho674</string>
    <string name="twitter_user_id" translatable="false">twitter://user?user_id=EkotarKantho</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url" translatable="false">https://twitter.com/EkotarKantho</string>

    <!-- ad mob credential -->
    <string name="admob_app_id" translatable="false">ca-app-pub-2494856291324390~1555071396</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Terms and conditions, privacy policy and faq url -->
    <string name="privacy_url" translatable="false">https://www.ekotarkantho.com/privacy-policy/</string>

    <!-- App Settings Preference KEY-->
    <string name="pref_theme" translatable="false">perf_theme</string>
    <string name="pref_notification" translatable="false">perf_notification</string>
    <string name="pref_language" translatable="false">pref_language</string>
    <string name="pref_app_version" translatable="false">pref_app_version</string>
    <string name="pref_font_size" translatable="false">pref_font_size</string>

    <!-- Navigation drawer String -->
    <string name="navigation_open" translatable="false">open drawer</string>
    <string name="navigation_close" translatable="false">close drawer</string>

    <string name="player_error" translatable="false">Error initializing YouTube player: %s</string>

    <!--Non translateable area end-->


    <string name="app_name">Ekotar Kantho</string>   <!--Replace with your app name -->
    <!-- Navigation View Menu String -->
    <string name="nav_categories">Categories</string>
    <string name="nav_category">Categories</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_social">Social</string>
    <string name="nav_facebook">Facebook</string>
    <string name="nav_youtube">Youtube</string>
    <string name="nav_twitter">Twitter</string>
    <string name="nav_others">Others</string>
    <string name="nav_rate_app">Rate App</string>
    <string name="nav_settings">Settings</string>


    <!-- Toolbar Title String -->
    <string name="toolbar_address">Address</string>
    <string name="toolbar_categories">Categories</string>
    <string name="toolbar_comments">Comments</string>
    <string name="toolbar_bookmarks">Bookmarks</string>
    <string name="toolbar_settings">Settings</string>

    <string name="footer">Copyright © 2023 Ektar Kantha All rights reserved. Use of any text, image, video of this website without permission is illegal.</string>
    <string name="home">Latest News</string>
    <string name="newsfeed">Newsfeed</string>


    <!-- Toolbar Menu String -->
    <string name="toolbar_search">Type Something to Search</string>
    <string name="toolbar_filter">Filter</string>

    <!-- Item Menu String -->
    <string name="menu_share">Share</string>
    <string name="menu_save">Save</string>

    <!--Toast, Snackbar message String -->
    <string name="failed_msg">Failed</string>
    <string name="no_internet_msg">No internet!</string>
    <string name="connect_msg">Connect</string>
    <string name="server_failed_msg">Server connection failed</string>
    <string name="no_data">No Data!</string>
    <string name="no_bookmarks">No Bookmarks!</string>


    <!-- App Settings -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>
    <string name="pref_text_title">Text size</string>
    <string name="pref_text_size">Select text size</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_size">Select Theme</string>
    <string name="pref_language_dialog_title">Languages</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_summary">English</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_app_version_summary">v1.0</string>

    <!-- App Theme Settings -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- App Text Settings -->
    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>

    <!-- App Language Settings -->
    <string name="language_bangla">বাংলা</string>
    <string name="language_english">English</string>


    <string name="share_text">Install best news application from:</string>
    <string name="permission_not_granted">Permission not granted!</string>


    <string name="text_placeholder">Text</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="posts">Posts</string>
    <string name="already_saved">Already Saved</string>
    <string name="saved">Saved</string>
    <string name="view_detail">View Detail</string>
    <string name="detail">Detail</string>
    <string name="mark_read">Mark as Read</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
